添加api过滤器

--- a/DotNetCore/AspNetCoreNodeApp/appsettings.json
+++ b/DotNetCore/AspNetCoreNodeApp/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ApiKey": {    
+    "EncryptKey": "@*api#%^@",
+    "ExpiredSecond": "300"
   }
 }
