--- a/DotNetCore/AspNetCoreNodeApp/project.json
+++ b/DotNetCore/AspNetCoreNodeApp/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.1",
-      "type": "platform"
+      "version": "1.0.1"
+      //"type": "platform"
     },
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
@@ -26,7 +26,7 @@
   "frameworks": {
     "netcoreapp1.0": {
       "imports": [
-        "dotnet5.6",
+        "dnxcore50",
         "portable-net45+win8"
       ]
     }
@@ -54,5 +54,10 @@
 
   "scripts": {
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+  },
+  //跨平台发布需要添加如下节点
+  "runtimes": {
+    "ubuntu.14.04-x64": {}, //运行在ubuntu.14.04的64位系统
+    "win10-x64": {} //运行在win7的64位系统
   }
 }
