--- a/DotNetCore/src/ServiceMonitor/project.json
+++ b/DotNetCore/src/ServiceMonitor/project.json
@@ -1,10 +1,11 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
+    "Dapper": "1.50.3-beta1",
     "Microsoft.NETCore.App": {
       //"type": "platform",
       "version": "1.0.1"
