--- a/DotNetCore/src/AspNetCoreNodeApp/NuGet.Config
+++ b/DotNetCore/src/AspNetCoreNodeApp/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
+    <add key="nuget.cnblogs.com" value="https://nuget.cnblogs.com/v3/index.json" protocolVersion="3" />
     <add key="AspNetCI" value="https://www.myget.org/F/aspnetcirelease/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
