--- a/Angular2/TestAngular/package.json
+++ b/Angular2/TestAngular/package.json
@@ -42,6 +42,7 @@
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.3"
+    "typescript": "~2.0.3",
+    "angular-in-memory-web-api":"~0.1.13"
   }
 }
