--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  // "files": [
+  //       "src/app/main.ts",
+  //       "src/app/greet.ts"
+  //   ],
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
@@ -7,6 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false  
+ 
   }
 }
